Database update scripts can be found under sql/update directory.

Version 1.8
- After processing file attribute delete attachments when form data have been sent
- Setting file formmaker.ini.append.php renamed into formmaker.ini
- Added possibility to restrict the forms for which external scripts (both - processing and injecting) will be run

Version 1.7.3
- 'File' attribute enabled
- Fixed not working form when there was only file attribute in it
- Fixed errors displayed when 'File' attribute remained empty and form was processed
- Fixed errors displayed when 'File' attribute remained not-empty and form was processed

Version 1.7.2
- 'Select' attribute fixed and enabled
- Fixed problem with dissapearing custom regex value
- Fixed Fatal Error caused by class FormMaker_Validate_Exception, which didn't exist, but was used in the code
- Created 'design/standard/templates/formmaker' directory, so since now all new templates should be placed in there. Also, all FormMaker templates moved into there.
  Please BE AWARE about that when update'ing your FormMaker installation.
- 'design/admin2/forms' directory renamed to 'design/admin2/formmaker'
- Separate template file for the buttons displayed on the front

Version 1.7.1
- fix for formdefinitions, when process_class not set post action should be 'email'
- fixed loading the JS and CSS files in the admin interface and on front
- added CSS colors for 'File' and 'Select' types in admin interface
- fixed select list default value
- 'File' and 'Select' types needs to be temporarly disabled, since they're not working as they should
- fixed checkbox mandatory validation on front

Version 1.7.0
- Added possibility to run external processing class, new form field 'Process class'
- Added 'Identifier' attribute to form field, readonly if no permission, this is passed to form array data
- Added option 'object' to post_action (if set as an action, external Process Class will be executed to process form data)
- Some typo issues fixed
