@@ -28,12 +28,12 @@ mysql -u {mysql-username} -p {your-ezpublish-database} < install.sql
 Go to User accounts => Roles and policies and click on your editor's group. Now click "Edit" button and add "New policy".
 As a module please select "formmaker" and choose "edit" function. Then accept it by clicking "Grant full access". You can perform same action for "remove" function.
 
-7.1 If you want to allow Editor to change field identifier you need to do the same with "special" function. If this policy is not set Identifier field is readonly when editing form.
+8 If you want to allow Editor to change field identifier you need to do the same with "special" function. If this policy is not set Identifier field is readonly when editing form.
 
-8. Next, you need to add following privilages to Anonymous and Editors user groups (for ezjscore purposes):
+9. Next, you need to add following privilages to Anonymous and Editors user groups (for ezjscore purposes):
 module: ezjscore, function: call, function limitation: formmaker
 
-9. Now you can use "formmaker" tab, which is displayed in your admin panel. After you will create your form, you can assign it to Form class object. 
+10. Now you can use "formmaker" tab, which is displayed in your admin panel. After you will create your form, you can assign it to Form class object.
 It is also possible to add Form attribute (datatype) into your own class.
 
 Troubles...
