@@ -64,7 +64,10 @@ class formDefinitions extends eZPersistentObject
                                                                       "required" => false ),
                                          "process_class"    => array( "name" => "process_class",
                                                                       "datatype" => "string",
-                                                                      "required" => false ) ),
+                                                                      "required" => false ),
+                                         "email_title"      => array( "name" => "email_title",
+                                                                      "datatype" => "string",
+                                                                      "required" => true ) ),
                       "keys" => array('id'),         
                       "increment_key" => "id",
                       "class_name" => "formDefinitions",
