@@ -22,6 +22,11 @@ $form_elements = array( 'name'          => array(   'required'  => true,
                                                     'type'      => 'text',
                                                     'css'       => 'attribute-full-width',
                                                     'value'     => '' ),
+                        'email_title'   => array(   'required'  => true,
+                                                    'label'     => ezpI18n::tr('formmaker/admin', 'E-mail title' ),
+                                                    'type'      => 'text',
+                                                    'css'       => 'attribute-full-width',
+                                                    'value'     => 'New form answer' ),
                         'first_page'    => array(   'required'  => true, 
                                                     'label'     => ezpI18n::tr('formmaker/admin', 'First page label' ), 
                                                     'type'      => 'text',
