@@ -6,6 +6,7 @@ Version 1.8
 - After processing file attribute delete attachments when form data have been sent
 - Setting file formmaker.ini.append.php renamed into formmaker.ini
 - Added possibility to restrict the forms for which external scripts (both - processing and injecting) will be run
+- Editors can set the email title for each form
 
 Version 1.7.3
 - 'File' attribute enabled
